name:                koka
version:             0.1.0.0
license-file:        LICENSE
author:              Daan Leijen
maintainer:          daan@microsoft.com
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

executable koka
  main-is:             Main.hs
  other-extensions:    CPP, OverloadedStrings
  build-depends:       base >=4.9 && <5
                       , bytestring >=0.10 && <1
                       , time >=1.6 && <2
                       , parsec >=3.1 && <4
                       , containers >=0.5 && <1
                       , text >=1.2 && <2
                       , array >=0.5 && <1
                       , process >=1.4 && <2
                       , directory >=1.3 && <2
  hs-source-dirs:      src, src/Platform/cpp
  c-sources:           src/Platform/cpp/Platform/cconsole.c
  include-dirs:        src/Platform/cpp/Platform
  build-tools:         alex
  default-language:    Haskell2010
